<resources>
    <string name="app_name">Traveler</string>
    <string name="facebook_app_id">567543916759028</string>

    <string name="login_usr">Usuario</string>
    <string name="login_pass">password</string>
    <string name="login_name">Nombre</string>
    <string name="login_email">Correo</string>
    <string name="reg_btn">Registrar</string>
    <string name="http_error_404">Recurso no encontrado</string>
    <string name="http_error_server">Error en el Servidor</string>
    <string name="http_error_internet">Sin Conexion a internet</string>
    <string name="http_error_timeout">El servidor no responde</string>
    <string name="login_error">Usuario o password incorrecto</string>
    <string name="reg_error">El usuario ya existe</string>
    <string name="reg_success">Registro Exitoso</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="precio">Precio</string>
    <string name="asientos_disponibles">Asientos disponibles</string>
    <string name="fecha">Fecha</string>
    <string name="carro">Carro</string>
    <string name="imagen">Imagen</string>
    <string name="contacto">Contacto</string>
    <string name="publicar">Publicar</string>
    <string name="text_asientos">Asientos</string>
    <string name="text_cupos">Cupos</string>
    <string name="text_destino">Destino</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="actualizar_usuario">Actualizar usuario</string>
</resources>
